--- a/index.html
+++ b/index.html
@@ -166,8 +166,6 @@
                     z-index: 3;
                     transition: background-color 0.3s;
                     font-size: 1.5rem;
-                    
-                    /* MODIFICA: Assicura la perfetta centratura delle frecce */
                     display: flex;
                     justify-content: center;
                     align-items: center;
@@ -184,9 +182,28 @@
             </style>
 
             <div class="carousel-container">
-                <div class="carousel-slide" data-index="0"><img src="https://images.unsplash.com/photo-1582408921715-18e780636892?q=80&w=1740&auto=format&fit=crop" alt="Paesaggio con pale eoliche"><div class="carousel-caption"><h1>Il Futuro è Verde, Gestiamolo Insieme.</h1><p>Soluzioni innovative per un mondo più pulito.</p></div></div>
-                <div class="carousel-slide" data-index="1"><img src="https://images.unsplash.com/photo-1532996122724-e3c354a0b15b?q=80&w=1740&auto=format&fit=crop" alt="Mani che tengono una piantina"><div class="carousel-caption"><h1>Dalla Raccolta al Riciclo Completo.</h1><p>Valorizziamo ogni risorsa, per un'economia circolare.</p></div></div>
-                <div class="carousel-slide" data-index="2"><img src="https://images.unsplash.com/photo-1466611653911-95081537e5b7?q=80&w=1740&auto=format&fit=crop" alt="Foresta rigogliosa vista dall'alto"><div class="carousel-caption"><h1>Tecnologia al Servizio dell'Ambiente.</h1><p>Innoviamo per ridurre l'impatto ambientale.</p></div></div>
+                <!-- MODIFICA: Sostituito il link della prima immagine con uno nuovo e funzionante -->
+                <div class="carousel-slide" data-index="0">
+                    <img src="https://images.unsplash.com/photo-1497435334941-8c899ee9e8e9?q=80&w=1887&auto=format&fit=crop" alt="Pannelli solari in un campo verde">
+                    <div class="carousel-caption">
+                        <h1>Il Futuro è Verde, Gestiamolo Insieme.</h1>
+                        <p>Soluzioni innovative per un mondo più pulito.</p>
+                    </div>
+                </div>
+                <div class="carousel-slide" data-index="1">
+                    <img src="https://images.unsplash.com/photo-1532996122724-e3c354a0b15b?q=80&w=1740&auto=format&fit=crop" alt="Mani che tengono una piantina">
+                    <div class="carousel-caption">
+                        <h1>Dalla Raccolta al Riciclo Completo.</h1>
+                        <p>Valorizziamo ogni risorsa, per un'economia circolare.</p>
+                    </div>
+                </div>
+                <div class="carousel-slide" data-index="2">
+                    <img src="https://images.unsplash.com/photo-1466611653911-95081537e5b7?q=80&w=1740&auto=format&fit=crop" alt="Foresta rigogliosa vista dall'alto">
+                    <div class="carousel-caption">
+                        <h1>Tecnologia al Servizio dell'Ambiente.</h1>
+                        <p>Innoviamo per ridurre l'impatto ambientale.</p>
+                    </div>
+                </div>
             </div>
             
             <button class="carousel-button prev">❮</button>
